resources/sass/_blog.scss
@import "~kingdom-css/src/modules/layout";
@import "~kingdom-css/src/modules/sizing";
@import "~kingdom-css/src/modules/spacing";
@import "~kingdom-css/src/modules/colors";
@import "~kingdom-css/src/modules/text-direction";

%unimposing {
  @extend .color-gray-700 !optional;
}

%block-link {
  @include display-block;
  @include space-inside;

  > * {
    @include display-block;
  }

  > :not(:last-child) {
    @extend %unimposing;
    word-break: normal;
  }

  // Increase specificity with the double link
  &:link:link {
    text-decoration: none;
  }

  &:hover > :last-child {
    text-decoration: underline;
  }
}

.blog {
  @include apply-background-color(background);
  @extend .overflow-wrap !optional;
  @extend .hyphens-auto !optional;
  min-height: 100vh;

  > * {
    $width: $readable-line-length-min + $readable-line-length-max;
    @include apply-background-color(body);
    max-width: 99%;
    max-width: calc(100% - #{spacing-base-var()});
    width: $width;
    min-width: auto;

    margin-left: auto;
    margin-right: auto;

    @include padding-relative;

    > .full-bleed,
    > .start-margin-bleed,
    > .end-margin-bleed {
      width: 100%;
      width: 100vw;
      max-width: none;
      margin-left: calc((100% - 100vw) / 2);
      margin-right: calc((100% - 100vw) / 2);
    }

    > .span-content {
      width: auto;
    }
  }

  p {
    @include width-readable;
  }

  h1 {
    @include apply-color(primary);
  }

  header small {
    @extend %unimposing;
  }
}

.blog-intro {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;

  p {
    width: auto;
  }

  > :first-child {
    flex: 1 1 auto;
    min-width: $readable-line-length-min;
  }

  > :last-child {
    flex: 1 1 0;
    min-width: 10ch;
    max-width: 25%;
    max-width: max-content;
    margin-left: auto;

    align-self: flex-end;

    @include space-inside;
  }
}

.blog-entry-link,
.blog-title,
[rel="author"],
[type="application/atom+xml"] {
  &:link {
    text-decoration: none;
  }

  &:link:hover {
    text-decoration: underline;
  }
}

[type="application/atom+xml"]:link {
  display: inline-block;
  text-align: center;
  overflow-wrap: break-word;
  hyphens: manual;
  @include apply-color(primary);

  &::before {
    content: url('data:image/svg+xml;utf8,<svg viewBox="0 0 8 8" xmlns="http://www.w3.org/2000/svg"><rect fill="#{get-color(primary)}" height="8" rx="1.5" width="8"/><g fill="#fff"><circle cx="2" cy="6" r="1"/><path d="m1 4a3 3 0 0 1 3 3h1a4 4 0 0 0 -4-4z"/><path d="m1 2a5 5 0 0 1 5 5h1a6 6 0 0 0 -6-6z"/></g></svg>');
    @include length-relative(width height);
    width: var(--line-height);
    height: var(--line-height);
    vertical-align: top;
  }

  &::after {
    content: "(Atom)";
    text-decoration: inherit;
  }

  &::before,
  &::after {
    display: inline-block;
    line-height: inherit;
  }
}

.blog-entry-list {
  @extend %px-0;
  list-style: none;

  > * + * {
    @extend %mt-2 !optional;
  }
}

.blog-entry-short {
  > * {
    @extend %mt-0 !optional;
  }

  img {
    @extend %h-5 !optional;
  }

  @include for-ltr {
    img {
      float: left;
    }
  }
  @include for-rtl {
    img {
      float: right;
    }
  }

  .blog-entry-footer {
    clear: both;
    @extend %unimposing;
  }

  .blog-read-more-link {
    @extend .sr-only-focusable !optional;
    @extend %block-link;
  }

  position: relative;

  // elevate the links up
  a {
    position: relative;
    z-index: 1;
  }

  .blog-entry-title {
    a {
      position: static;
      // expand the pseudo-element to cover the entry
      &::before {
        content: "";
        position: absolute;
        z-index: 0;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
      }
    }
  }
}

.blog-latest-entries {
  header {
    text-align: center;
    text-transform: uppercase;
  }
}

.blog-latest-entries-links {
  @extend .list-unstyled !optional;

  > * + * {
    @extend %mt-1;
  }
}

.blog-feed-subscriptions {
  text-align: center;
}

.blog-entry-header {
  @extend %text-3-block;

  display: flex;
  flex-direction: column;
  justify-content: center;

  p {
    width: auto;
  }
}

.blog-entry-publication-info {
  @extend %unimposing;
}

.blog-author-list {
  @extend .list-comma-separated !optional;
}

.blog-entry-nav ul {
  @extend .list-unstyled !optional;

  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  @extend .clearfix-unless-flex !optional;

  > * {
    width: 50%;

    @supports (display: flex) {
      width: auto;
      max-width: 66%;
    }
  }

  a {
    @extend %block-link;
  }

  @include for-ltr {
    > .blog-next-entry {
      float: right;
    }
    > .blog-previous-entry {
      float: left;
    }
  }
  @include for-rtl {
    > .blog-next-entry {
      float: left;
    }
    > .blog-previous-entry {
      float: right;
    }
  }

  > :only-child {
    flex-grow: 1;
    max-width: none;
  }
}

.blog-social-sharing {
  > * {
    @extend %mt-0 !optional;
    text-align: center;
  }

  ul {
    @extend .list-inline !optional;
  }

  :link {
    text-decoration: none;
  }

  :link:hover {
    text-decoration: underline;
  }
}

.share-link-prefix {
  @extend .sr-only !optional;
}

.share-link-service {
  @include apply-color(primary);
}

.blog-related-content {
  header {
    text-transform: uppercase;
    @include display-block;
    @extend .unborder !optional;
    width: 100%;
  }

  p {
    width: auto;
  }
}

.children\:boxed {
  text-align: center;

  display: flex;
  flex-wrap: wrap;
  flex: 0;
  justify-content: center;

  > * {
    @include border-for-auto-height;
    @include display-inline-block($vertical-align: middle);
    @include space-inside;
    @include margin-relative(left right, 1/4);

    display: flex;
    flex-direction: column;
    justify-content: center;
  }
}

